--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <canvas id="canvas" width="900" height="900"></canvas> 
-  <div class="container"> 
-    <button id="upButton">UP</button> 
-    <button id="leftButton">LEFT</button> 
-    <button id="rightButton">RIGHT</button> 
-    <button id="start">start</button>
+    <canvas id="canvas" width="900" height="900"></canvas>
+    <div class="container">
+      <button id="upButton">UP</button>
+      <button id="leftButton">LEFT</button>
+      <button id="rightButton">RIGHT</button>
+      <button id="start">start</button>
+    </div>
+    <canvas id="canvas2" width="900" height="900"></canvas>
   </body>
 </html>
-
-
